01-operator/03-podset-operator-go/app-deployer/app/src/kube-resources/01-namespace.yaml
  
apiVersion: v1
kind: Namespace
metadata:
  name: g-podset-operator-greetings-pro
  labels:
    app:  g-podset-operator-greetings-app
