01-operator/03-podset-operator-go/app-deployer/app/src/kube-resources/04-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: g-podset-operator-greetings-route
  namespace: g-podset-operator-greetings-pro
  labels:
    app: g-podset-operator-greetings-app
    name: g-podset-operator-greetings-route
spec:
  path: /
  to:
    kind: Service
    name: g-podset-operator-greetings-service
    weight: 100
  port:
    targetPort: my-container
